# wasm_websocket_rpc

./: Cargo.toml  README.md
assets/: index.html
src/: global_state.rs  lib.rs  messagepack_helpers.rs  responses.rs  websocket_api.rs
