[package]
name = "wasm_websocket_rpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# logging
log = "0.4.20"
console_log = "1.0.0"
# webassembly
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
# deserialization
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rmp-serde = "1.1.2"
# uuid
uuid = { version = "1.5.0", features = ["v4", "js"] }
